# xde-ctools

./: .gitignore  .indent.pro  AUTHORS  ChangeLog  KEYS.adoc  Makefile.am  NEWS  NEWS.in  README  README.in  README.md  README.md.in  RELEASE  RELEASE.md  SAMPLES.md  THANKS  TODO  TODO.in  autogen.sh  configure.ac  configure.sh  configure.template  index.md  rebuild.sh
data/: Makefile.am  XDE-Cycle  XDE-Feedback  XDE-Input  XDE-Pager  XDE-Places  XDE-Recent  XDE-SetBG  XDE-SetBg  XDE-Sound  XDE-Tasks  XDE-WinList  XDE-WkspMenu  xde-app.desktop  xde-input.desktop  xde-keysrc  xde-pager.desktop  xde-places.desktop  xde-recent.desktop  xde-run.desktop  xde-setbg.desktop  xde-sound.desktop  xde-winlist.desktop  xde-winmenu.desktop  xde-wkspmenu.desktop
man/: Makefile.am  xde-app.pod  xde-clip.pod  xde-ctools.pod  xde-cycle.pod  xde-desktop.pod  xde-dock.pod  xde-input.pod  xde-keys.pod  xde-launch.pod  xde-menu.pod  xde-menugen.pod  xde-monitor.pod  xde-opacity.pod  xde-open.pod  xde-pager.pod  xde-places.pod  xde-preferred.pod  xde-recent.pod  xde-run.pod  xde-select.pod  xde-setbg.pod  xde-sound.pod  xde-wait.pod  xde-winlist.pod  xde-winmenu.pod  xde-wkspmenu.pod
samples/: index.md  xde-app.md  xde-pager.md  xde-places.md  xde-run.md  xde-winlist.md
src/: Makefile.am  menuxml.c  menuxml.h  xde-app.c  xde-app.h  xde-chooser.c  xde-clip.c  xde-clip.h  xde-cycle.c  xde-cycle.h  xde-desktop.c  xde-dock.c  xde-dock.h  xde-feedback.c  xde-input.c  xde-keys.c  xde-keys.h  xde-menu  xde-menu.c  xde-menu.h  xde-menugen.c  xde-monitor.c  xde-monitor2.c  xde-pager.c  xde-pager.h  xde-places.c  xde-preferred.c  xde-recent.c  xde-run.c  xde-run.h  xde-select.c  xde-setbg.c  xde-sound.c  xde-tasks.c  xde-wait.c  xde-winds.c  xde-winlist.c  xde-winlist.h  xde-winmenu.c  xde-winmenu.h  (+1 more)
