
dist_autostart_DATA = \
	xde-input.desktop \
	xde-pager.desktop \
	xde-setbg.desktop

dist_applications_DATA = \
	xde-app.desktop \
	xde-input.desktop \
	xde-pager.desktop \
	xde-places.desktop \
	xde-recent.desktop
	xde-run.desktop \
	xde-setbg.desktop \
	xde-winlist.desktop \
	xde-winmenu.desktop \
	xde-wkspmenu.desktop

dist_appdefaults_DATA = \
	XDE-Cycle \
	XDE-Feedback \
	XDE-Input \
	XDE-Monitor \
	XDE-Pager \
	XDE-Places \
	XDE-Recent \
	XDE-SetBG \
	XDE-Tasks \
	XDE-WinList \
	XDE-WkspMenu

